# machi

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: cd.yml  rust-publish.yml
machi/: Cargo.toml  README.md
machi-auto/: Cargo.toml
machi-auto/src/: main.rs
machi-bot/: Cargo.toml
machi-bot/src/: main.rs  util.rs
machi-bot/src/config/: mod.rs  schema.rs
machi-cli/: Cargo.toml
machi-cli/src/: chatbot.rs  lib.rs
machi-derive/: Cargo.toml
machi-derive/src/: basic.rs  client.rs  custom.rs  embed.rs  lib.rs  tool.rs
machi-derive/src/embed/: fields.rs  mod.rs
machi/examples/: agent_base_tools.rs  agent_ollama_basic.rs  agent_ollama_callback.rs  agent_ollama_derive.rs  agent_ollama_guardrail.rs  agent_ollama_multi.rs  agent_ollama_policy.rs  agent_ollama_streaming.rs  agent_ollama_structured.rs  agent_ollama_tools.rs  agent_ollama_tracing.rs  agent_ollama_vision.rs  agent_openai_basic.rs  agent_openai_callback.rs  agent_openai_derive.rs  agent_openai_guardrail.rs  agent_openai_multi.rs  agent_openai_policy.rs  agent_openai_streaming.rs  agent_openai_structured.rs  agent_openai_tools.rs  agent_openai_tracing.rs  agent_openai_vision.rs  agent_run_result.rs  agent_simple.rs  agent_stream.rs  agent_streaming.rs  agent_vision.rs  agent_with_mcp_tools.rs  agent_x402_chat.rs  basic_agent.rs  llm_ollama_chat.rs  llm_ollama_embedding.rs  llm_ollama_stream.rs  llm_ollama_structured.rs  llm_ollama_vision.rs  llm_openai_chat.rs  llm_openai_embedding.rs  llm_openai_stream.rs  llm_openai_structured.rs  (+7 more)
machi/src/: a2a.rs  agent.rs  audio.rs  callback.rs  chat.rs  context.rs  embedding.rs  error.rs  guardrail.rs  lib.rs  managed_agent.rs  mcp.rs  memory.rs  message.rs  middleware.rs  model.rs  multimodal.rs  prelude.rs  prompts.rs  stream.rs  tool.rs  usage.rs
machi/src/agent/: as_tool.rs  builder.rs  checks.rs  completion.rs  config.rs  core.rs  error.rs  events.rs  executor.rs  hook.rs  memory.rs  mod.rs  options.rs  prompts_render.rs  result.rs  runner.rs  streaming.rs  tool.rs  tool_processor.rs
machi/src/agent/prompt_request/: mod.rs  streaming.rs
machi/src/agent/request/: mod.rs  prompt.rs  streaming.rs
machi/src/backend/: mod.rs  rig.rs
machi/src/callback/: async_registry.rs  builtins.rs  context.rs  hooks.rs  logging.rs  mod.rs  noop.rs  registry.rs
machi/src/chain/: ethereum.rs
machi/src/client/: audio_generation.rs  builder.rs  completion.rs  embeddings.rs  image_generation.rs  mod.rs  traits.rs  transcription.rs  verify.rs
machi/src/completion/: errors.rs  message.rs  mod.rs  request.rs  streaming.rs  traits.rs
machi/src/core/: json_utils.rs  mod.rs  one_or_many.rs  wasm_compat.rs
machi/src/embedding/: builder.rs  distance.rs  embed.rs  embedding.rs  errors.rs  mod.rs  tool.rs  traits.rs
machi/src/eval/: mod.rs
machi/src/extract/: mod.rs
machi/src/hooks/: context.rs  logging.rs  mod.rs
machi/src/http/: mod.rs  multipart.rs  retry.rs  sse.rs  traits.rs
machi/src/integration/: cli_chatbot.rs  discord_bot.rs  mod.rs
machi/src/llms/: error.rs  mod.rs
machi/src/llms/ollama/: chat.rs  client.rs  config.rs  embedding.rs  mod.rs  stream.rs  types.rs
machi/src/llms/openai/: audio.rs  chat.rs  client.rs  config.rs  embedding.rs  mod.rs  stream.rs  types.rs
machi/src/loader/: file.rs  mod.rs  pdf.rs
machi/src/loader/epub/: errors.rs  loader.rs  mod.rs  text_processors.rs
machi/src/managed/: tool_wrapper.rs
machi/src/mcp/: client.rs  mod.rs
machi/src/memory/: in_memory.rs  mod.rs  sqlite.rs
machi/src/modalities/: mod.rs
machi/src/modalities/audio/: generation.rs  mod.rs  transcription.rs
machi/src/modalities/image/: generation.rs  mod.rs
machi/src/policy/: mod.rs
machi/src/prompts/: engine.rs  mod.rs  renderer.rs  templates.rs
machi/src/providers/: common.rs  mock.rs  mod.rs
machi/src/providers/anthropic/: client.rs  completion.rs  mod.rs  streaming.rs
machi/src/providers/anthropic/decoders/: jsonl.rs  line.rs  mod.rs  sse.rs
machi/src/providers/huggingface/: client.rs  completion.rs  image_generation.rs  mod.rs  streaming.rs  transcription.rs
machi/src/providers/ollama/: client.rs  completion.rs  embedding.rs  message.rs  mod.rs  streaming.rs
machi/src/providers/openai/: audio_generation.rs  client.rs  completion.rs  embedding.rs  image_generation.rs  mod.rs  streaming.rs  transcription.rs
machi/src/providers/openai/completion/: mod.rs  streaming.rs
machi/src/providers/openai/responses_api/: mod.rs  streaming.rs
machi/src/providers/xai/: client.rs  completion.rs  mod.rs  streaming.rs
machi/src/store/: builder.rs  in_memory_store.rs  lsh.rs  mod.rs  request.rs  traits.rs
machi/src/telemetry/: mod.rs
machi/src/tool/: mod.rs  server.rs  toolset.rs  traits.rs
machi/src/tool/builtin/: mod.rs  think.rs
machi/src/tools/: executor.rs  final_answer.rs  fs.rs  mod.rs  shell.rs  tool.rs  user_input.rs  visit_webpage.rs  wallet.rs  web_search.rs
machi/src/wallet/: error.rs  mod.rs
machi/src/wallet/eth/: mod.rs  tools.rs  wallet.rs
machi/src/wallet/evm/: ens.rs  erc20.rs  erc8004.rs  mod.rs  tools.rs  wallet.rs  x402.rs
machi/tests/: integration_test.rs
