[workspace]
members = ["machi", "machi-derive"]
default-members = ["machi"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyroth/machi"

[workspace.dependencies]
machi = { version = "0.6.0", path = "machi" }
machi-derive = { version = "0.6.0", path = "machi-derive" }

anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
convert_case = "0.11.0"
darling = "0.23.0"
dirs-next = "2.0"
futures = "0.3"
getrandom = "0.4.1"
html-escape = "0.2"
minijinja = { version = "2.6", features = ["loader"] }
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11"
reqwest = { version = "0.13.1", features = ["json", "stream", "multipart"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = "1.0"
rmcp = { version = "0.14", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["sync"] }
tokio-test = "0.4"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.16", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
doc_markdown = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
fn_params_excessive_bools = "allow"
future_not_send = "allow"
implicit_hasher = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_many_lines = "allow"
unimplemented = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
excessive_nesting = "allow"
cast_precision_loss = "allow"
cargo_common_metadata = "allow"
