[workspace]
members = ["machi", "machi-auto", "machi-derive"]
default-members = ["machi"]
exclude = ["3rdparty"]
resolver = "3"

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/machi"
description = "A lightweight, ergonomic AI Agent Framework"
keywords = ["ai", "agent", "llm", "openai", "ollama"]
categories = ["api-bindings", "asynchronous"]

[workspace.dependencies]
machi = { version = "0.8", path = "machi" }
machi-derive = { version = "0.8", path = "machi-derive" }

async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
convert_case = "0.11.0"
darling = "0.23.0"
futures = "0.3.32"
proc-macro2 = "1.0.106"
quote = "1.0.45"
ra2a = "0.9.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "multipart"] }
rmcp = { version = "1.3.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full", "extra-traits", "parsing"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", default-features = false, features = ["sync", "macros", "process"] }
tokio-test = "0.4.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
doc_markdown = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
fn_params_excessive_bools = "warn"
future_not_send = "warn"
implicit_hasher = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
multiple_crate_versions = "warn"
must_use_candidate = "warn"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "warn"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
significant_drop_tightening = "warn"
similar_names = "warn"
struct_excessive_bools = "warn"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_many_lines = "warn"
unimplemented = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
cargo_common_metadata = "warn"
