[package]
name = "machi-auto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "machi"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
