[package]
name = "machi-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Machi bot - A personal AI assistant with multi-channel support"

[features]
default = ["telegram"]
telegram = ["dep:teloxide"]

[dependencies]
async-trait.workspace = true
clap.workspace = true
dirs-next.workspace = true
machi = { workspace = true, features = ["toolkit"] }
regex.workspace = true
reqwest = { workspace = true, features = ["multipart", "json"] }
serde.workspace = true
serde_json.workspace = true
teloxide = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "machi"
path = "src/main.rs"

[lints]
workspace = true
