[package]
name = "machi-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for machi AI agents framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true
darling.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true

[lints]
workspace = true
