[package]
name = "machi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Web3-native AI Agent Framework"
keywords = ["ai", "agent", "llm", "openai", "ollama"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["full"]
openai = []
ollama = []
derive = ["machi-derive"]
a2a = ["ra2a"]
mcp = ["rmcp"]
toolkit = []
memory-sqlite = ["dep:rusqlite"]
schema = ["dep:schemars"]
full = ["openai", "ollama", "derive", "a2a", "mcp", "toolkit", "memory-sqlite", "schema"]

[dependencies]
# Core dependencies
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# Optional dependencies
machi-derive = { workspace = true, optional = true }
ra2a = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

# Template rendering
minijinja.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
