[package]
name = "machi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A Web3-native AI Agent Framework"
keywords = ["ai", "agent", "llm", "openai", "ollama"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["full"]
openai = []
ollama = []
derive = ["machi-derive"]
a2a = ["ra2a"]
mcp = ["rmcp"]
wallet = ["kobe", "kobe-eth", "alloy"]
x402 = ["wallet", "dep:x402-reqwest", "dep:x402-chain-eip155", "dep:x402-types", "dep:reqwest-middleware"]
erc8004 = ["wallet", "dep:erc8004"]
toolkit = []
memory-sqlite = ["dep:rusqlite"]
schema = ["dep:schemars"]
full = ["openai", "ollama", "derive", "a2a", "mcp", "wallet", "x402", "erc8004", "toolkit", "memory-sqlite", "schema"]

[dependencies]
alloy = { workspace = true, optional = true }
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
erc8004 = { workspace = true, optional = true }
futures.workspace = true
kobe = { workspace = true, optional = true }
kobe-eth = { workspace = true, optional = true }
machi-derive = { workspace = true, optional = true }
ra2a = { workspace = true, optional = true }
regex.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, optional = true }
reqwest-middleware = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
x402-types = { workspace = true, optional = true }
x402-reqwest = { workspace = true, optional = true }
x402-chain-eip155 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
